--- a/3简单工厂模式/index.html
+++ b/3简单工厂模式/index.html
@@ -5,6 +5,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div>简单工厂模式</div>
   <script>
     var BasketBall = function() {
       this.intro = '篮球盛行于美国'
